[project]
name = "kaywonda-ecommerce"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "fastapi[all]>=0.127.0",
    "httpx>=0.28.1",
    "ptpython>=3.0.32",
    "scalar-fastapi>=1.5.0",
    "sqlmodel>=0.0.28",
]
